--- a/testcode/static/bootstrap/css/bootstrap.css
+++ b/testcode/static/bootstrap/css/bootstrap.css
@@ -223,15 +223,17 @@ textarea {
 
 body {
   margin: 0;
-  font-family: 'Arial', sans-serif;
-  font-size: 15px;
-  line-height: 16px;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  line-height: 20px;
   color: #333333;
   background-color: #ffffff;
 }
 
 a {
-  color: rgb(20, 63, 6);
+  font-family:"Strait", sans-serif;
+  font-size:16px; 
+  color: #2e8c00;
   text-decoration: none;
 }
 
@@ -794,7 +796,7 @@ h4 small {
 ul,
 ol {
   padding: 0;
-  margin: 0 0 10px 25px;
+  margin: 0 0 3px 0px;
 }
 
 ul ul,
@@ -1004,6 +1006,10 @@ pre code {
   overflow-y: scroll;
 }
 
+form {
+  margin: 0 0 20px;
+}
+
 fieldset {
   padding: 0;
   margin: 0;
@@ -1032,7 +1038,7 @@ input,
 button,
 select,
 textarea {
-  font-size: 15px;
+  font-size: 14px;
   font-weight: normal;
   line-height: 20px;
 }
@@ -1041,6 +1047,7 @@ input,
 button,
 select,
 textarea {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 label {
@@ -1081,7 +1088,7 @@ input[type="color"],
 input,
 textarea,
 .uneditable-input {
- 
+  width: 206px;
 }
 
 textarea {
@@ -2919,8 +2926,13 @@ table th[class*="span"],
 .dropdown-submenu:hover > a {
   color: #ffffff;
   text-decoration: none;
-  background-color: #355a21;
- 
+  background-color: #0081c2;
+  background-image: -moz-linear-gradient(top, #0088cc, #0077b3);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0088cc), to(#0077b3));
+  background-image: -webkit-linear-gradient(top, #0088cc, #0077b3);
+  background-image: -o-linear-gradient(top, #0088cc, #0077b3);
+  background-image: linear-gradient(to bottom, #0088cc, #0077b3);
+  background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff0088cc', endColorstr='#ff0077b3', GradientType=0);
 }
 
@@ -3137,13 +3149,12 @@ button.close {
 }
 
 .btn {
-  font-family:'Arial', sans-serif;
   display: inline-block;
   *display: inline;
-  padding: 3px 12px;
+  padding: 4px 12px;
   margin-bottom: 0;
   *margin-left: .3em;
-  font-size: 15px;
+  font-size: 14px;
   line-height: 20px;
   color: #333333;
   text-align: center;
@@ -3152,14 +3163,20 @@ button.close {
   cursor: pointer;
   background-color: #f5f5f5;
   *background-color: #e6e6e6;
+  background-image: -moz-linear-gradient(top, #ffffff, #e6e6e6);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ffffff), to(#e6e6e6));
   background-image: -webkit-linear-gradient(top, #ffffff, #e6e6e6);
+  background-image: -o-linear-gradient(top, #ffffff, #e6e6e6);
+  background-image: linear-gradient(to bottom, #ffffff, #e6e6e6);
   background-repeat: repeat-x;
   border: 1px solid #bbbbbb;
   *border: 0;
   border-color: #e6e6e6 #e6e6e6 #bfbfbf;
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
   border-bottom-color: #a2a2a2;
-  border-radius: 1px;
+  -webkit-border-radius: 4px;
+     -moz-border-radius: 4px;
+          border-radius: 4px;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff', endColorstr='#ffe6e6e6', GradientType=0);
   filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
   *zoom: 1;
@@ -3167,40 +3184,6 @@ button.close {
      -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
           box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
 }
-
-.btn1 {
-   margin-top:-4px;
-  font-family:'Arial', sans-serif;
-  display: inline;
-  *display: inline;
-  padding: 1px 9px;
-  margin-bottom: 0;
-  *margin-left: .3em;
-  font-size: 15px;
-  line-height: 20px;
-  color: #333333;
-  text-align: center;
-  text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
-  vertical-align: middle;
-  cursor: pointer;
-  background-color: #f5f5f5;
-  *background-color: #e6e6e6;
-  background-image: -webkit-linear-gradient(top, #ffffff, #e6e6e6);
-  background-repeat: repeat-x;
-  border: 1px solid #bbbbbb;
-  *border: 0;
-  border-color: #e6e6e6 #e6e6e6 #bfbfbf;
-  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
-  border-bottom-color: #a2a2a2;
-  border-radius: 1px;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff', endColorstr='#ffe6e6e6', GradientType=0);
-  filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
-  *zoom: 1;
-  -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
-     -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
-          box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
-}
-
 
 .btn:hover,
 .btn:active,
@@ -3217,26 +3200,11 @@ button.close {
   background-color: #cccccc \9;
 }
 
-.btn1:active,
-.btn1.active {
-  background-color: #cccccc \9;
-}
-
 .btn:first-child {
   *margin-left: 0;
 }
 
 .btn:hover {
-  color: #333333;
-  text-decoration: none;
-  background-position: 0 -15px;
-  -webkit-transition: background-position 0.1s linear;
-     -moz-transition: background-position 0.1s linear;
-       -o-transition: background-position 0.1s linear;
-          transition: background-position 0.1s linear;
-}
-
-.btn1:hover {
   color: #333333;
   text-decoration: none;
   background-position: 0 -15px;
@@ -3414,9 +3382,11 @@ input[type="button"].btn-block {
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
   background-color: #da4f49;
   *background-color: #bd362f;
-
+  background-image: -moz-linear-gradient(top, #ee5f5b, #bd362f);
   background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#de3e24), to(#b21900));
- 
+  background-image: -webkit-linear-gradient(top, #de3e24, #b21900);
+  background-image: -o-linear-gradient(top, #ee5f5b, #bd362f);
+  background-image: linear-gradient(to bottom, #ee5f5b, #bd362f);
   background-repeat: repeat-x;
   border-color: #bd362f #bd362f #802420;
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
@@ -3444,9 +3414,7 @@ input[type="button"].btn-block {
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
   background-color: #5bb75b;
   *background-color: #51a351;
- 
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#389a00), to(#266900));
-
+  background-image: -webkit-linear-gradient(top, #389a00, #266900);  
   background-repeat: repeat-x;
   border-color: #51a351 #51a351 #387038;
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
@@ -3594,7 +3562,6 @@ input[type="submit"].btn.btn-mini {
 }
 
 .btn-group {
-  
   position: relative;
   display: inline-block;
   *display: inline;
@@ -3603,7 +3570,6 @@ input[type="submit"].btn.btn-mini {
   white-space: nowrap;
   vertical-align: middle;
   *zoom: 1;
-  height: 20px;
 }
 
 .btn-group:first-child {
@@ -3656,14 +3622,14 @@ input[type="submit"].btn.btn-mini {
 }
 
 .btn-group > .btn:first-child {
-  border-radius: 16px; 
-
+  margin-left: 0;
+  border-radius: 15px;
+  
 }
 
 .btn-group > .btn:last-child,
 .btn-group > .dropdown-toggle {
-          
-          
+  border-radius: 15px;
 }
 
 .btn-group > .btn.large:first-child {
@@ -3913,7 +3879,7 @@ input[type="submit"].btn.btn-mini {
 }
 
 .nav {
-  margin-bottom: 0px;
+  margin-bottom: 20px;
   margin-left: 0;
   list-style: none;
 }
@@ -3924,8 +3890,7 @@ input[type="submit"].btn.btn-mini {
 
 .nav > li > a:hover {
   text-decoration: none;
-  background-color: #dbfec5;
-  
+  background-color: #eeeeee;
 }
 
 .nav > li > a > img {
@@ -4054,19 +4019,19 @@ input[type="submit"].btn.btn-mini {
 }
 
 .nav-pills > li > a {
-  padding-top: 3px;
-  padding-bottom: 3px;
-  margin-top: 0px;
-  margin-bottom: 0px;
-  border-radius: 7px;
-  
+  padding-top: 8px;
+  padding-bottom: 8px;
+  margin-top: 2px;
+  margin-bottom: 2px;
+  -webkit-border-radius: 5px;
+     -moz-border-radius: 5px;
+          border-radius: 5px;
 }
 
 .nav-pills > .active > a,
 .nav-pills > .active > a:hover {
-  color: rgb(16, 68, 29);
-  background-color: rgb(210, 240, 206);
- 
+  color: #ffffff;
+  background-color: #0088cc;
 }
 
 .nav-stacked > li {
@@ -4314,24 +4279,30 @@ input[type="submit"].btn.btn-mini {
 .navbar {
   *position: relative;
   *z-index: 2;
-  margin-bottom: 10px;
+  margin-bottom: 7px;
   overflow: visible;
 }
 
 .navbar-inner {
-  min-height: 15px;
-  padding-right: 10px;
+  min-height: 29px;
+  padding-right: 20px;
   padding-left: 20px;
-  background-color: #fafafa; 
+  background-color: #fafafa;
+  background-image: -moz-linear-gradient(top, #ffffff, #f2f2f2);
   background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ffffff), to(#f2f2f2));
- 
- 
+  background-image: -webkit-linear-gradient(top, #ffffff, #f2f2f2);
+  background-image: -o-linear-gradient(top, #ffffff, #f2f2f2);
+  background-image: linear-gradient(to bottom, #ffffff, #f2f2f2);
   background-repeat: repeat-x;
   border: 1px solid #d4d4d4;
-  border-radius: 16px;
+  -webkit-border-radius: 15px;
+     -moz-border-radius: 15px;
+          border-radius: 15px;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff', endColorstr='#fff2f2f2', GradientType=0);
   *zoom: 1;
-  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
+  -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
+     -moz-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
+          box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
 }
 
 .navbar-inner:before,
@@ -4357,11 +4328,11 @@ input[type="submit"].btn.btn-mini {
 .navbar .brand {
   display: block;
   float: left;
-  padding: 4px 15px 5px;
+  padding: 3px 20px 3px;
   margin-left: -20px;
   font-size: 16px;
-  font-weight: 200;
-  color: #777777;
+  font-weight: 400;
+  color: #007a17;
   text-shadow: 0 1px 0 #ffffff;
 }
 
@@ -4371,7 +4342,7 @@ input[type="submit"].btn.btn-mini {
 
 .navbar-text {
   margin-bottom: 0;
-  line-height: 20px;
+  line-height: 40px;
   color: #777777;
 }
 
@@ -4384,7 +4355,7 @@ input[type="submit"].btn.btn-mini {
 }
 
 .navbar .divider-vertical {
-  height: 20px;
+  height: 40px;
   margin: 0 9px;
   border-right: 1px solid #ffffff;
   border-left: 1px solid #f2f2f2;
@@ -4551,8 +4522,8 @@ input[type="submit"].btn.btn-mini {
 
 .navbar .nav > li > a {
   float: none;
-  padding: 3px 15px 5px;
-  color: #2b5414;
+  padding: 10px 15px 10px;
+  color: #777777;
   text-decoration: none;
   text-shadow: 0 1px 0 #ffffff;
 }
@@ -4879,17 +4850,16 @@ input[type="submit"].btn.btn-mini {
 }
 
 .breadcrumb {
-  padding: 8px 15px;
-  
-  margin: 0 0 0px;
+ 
+
   list-style: none;
-  background-color: #f5f5f5;
   -webkit-border-radius: 4px;
      -moz-border-radius: 4px;
           border-radius: 4px;
 }
 
 .breadcrumb > li {
+  font-family:"Strait", sans-serif; 
   display: inline-block;
   *display: inline;
   text-shadow: 0 1px 0 #ffffff;
