--- a/testcode/templates/student-home.html
+++ b/testcode/templates/student-home.html
@@ -78,12 +78,12 @@
                   
                     <div class="navbar smalle">
                         <div class="navbar-inner">
-                               <a class="brand" href="#">Hi, {{ user.name}}</a>
+                               <a class="brand" href="#">Hi, Andrei Ivanov</a>
                          </div>
                         </div>
                                <ul class="nav">
-                                     <div class="btn-group in"><button class="btn" type="button"><i class="icon-home"></i> Home</button></div>
-                                     <div class="btn-group in"><button class="btn" type="button"><i class="icon-user"></i>  Account</button></div>
+                                     <div class="btn-group in"><button class="btn" type="button" id="homelink"><i class="icon-home"></i> Home</button></div>
+                                     <div class="btn-group in"><button class="btn" type="button"id="account"><i class="icon-user"></i>  Account</button></div>
                                      <div class="btn-group in"> <button class="btn" type="button" id="logout"><i class="icon-off"></i> Logout</button></div>
                                    
                                </ul>
@@ -157,11 +157,10 @@
                             </table>
                         {% else %}
                          <table border="0" id="problemstable">
-                            {% for problem in problems %}  
-                            
-                            <tr> 
-                                 <td >{{problem.0}} problems</td>
-                                 <td >{{problem.1}} unsolved problems</td>
+                            {% for key, value in problems.items %}  
+                             <tr> 
+                                 <td >{{key}} problems</td>
+                                 <td >{{value}} unsolved problems</td>
                             </tr>
                              {% endfor %}
                             
@@ -246,3 +245,4 @@
   </body>
   
 </html>
+    
