--- a/testcode/templates/teacher-lecture.html
+++ b/testcode/templates/teacher-lecture.html
@@ -100,7 +100,7 @@
                         </div>
                                <ul class="nav">
                                      <div class="btn-group in"><button class="btn" type="button" id="homelink"><i class="icon-home"></i> Home</button></div>
-                                     <div class="btn-group in"><button class="btn" type="button"><i class="icon-user"></i>  Account</button></div>
+                                     <div class="btn-group in"><button class="btn" type="button" id="account"><i class="icon-user"></i>  Account</button></div>
                                     <div class="btn-group in"> <button class="btn" type="button" id="logout"><i class="icon-off"></i> Logout</button></div>
                                    
                                </ul>
