--- a/testcode/static/text.css
+++ b/testcode/static/text.css
@@ -1,6 +1,6 @@
 body {
-      background-image: url(background.png);
-      background-repeat: repeat-y;
+      background-image: url(back2.png);
+      background-repeat: repeat;
       background-position: center;
       padding: 0px;
       margin: 0px;
@@ -153,7 +153,7 @@ a
 .marginbottom
 {
  
- margin-bottom: 10px;
+ margin-bottom: 3px;
 position: relative;
 height: 25px;
 
@@ -335,7 +335,7 @@ table#table2
 
 #problemstable  td
 {
-height:36px;
+height:37px;
 width:230px;
 border-bottom: 1px solid #ddd;
 border-top: 1px solid #ddd;
@@ -431,11 +431,12 @@ width:270px;
     border: 1px outset  #338e00;
 }
 
+
 .classe1
 {
     border-radius:6px; 
-    padding: 7px;
-    padding-top: 8px;
+    padding: 5px;
+    
     position: relative;
     width: 336px;
     height: 26px;
@@ -538,6 +539,15 @@ width:270px;
 }
 
 .fields
+{
+ font-size: 17px;
+ margin-top: 3px;
+ margin-bottom: 3px;
+ margin-left: 10px;
+ 
+ font-weight: 900;
+}
+.fields1
 {
  font-size: 17px;
  margin-top: 10px;
